--- a/docs/style.css
+++ b/docs/style.css
@@ -82,7 +82,7 @@ body {
 
 #ley {
     height: 25px;
-    padding: 20px 40px;
+    padding: 20px;
     margin: 15px 0;
     color: #009688;
     outline: none;
